<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.udacity.catpoint</groupId>
  <artifactId>catpoint-parent</artifactId>
  <packaging>pom</packaging>
  <version>1.0-SNAPSHOT</version>

  <!--Intellij entered this for us when we created our module-info.java files for these packages-->
  <modules>
    <module>Catpoint_Module</module>
    <module>ImageService_Module</module>
  </modules>

  <name>catpoint-parent</name>
  <url>https://github.com/yachabach/UdaSecurity.git</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>16</maven.compiler.source>
    <maven.compiler.target>16</maven.compiler.target>
  </properties>

  <!--These are dependencies shared by both modules-->
  <dependencies>
    <!-- add your dependencies here! -->
    <!--Required by both modules-->
    <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api/5.8.1 -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>5.8.1</version>
      <scope>test</scope>
    </dependency>

    <!--https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine/5.8.1-->
    <!--Required by both modules-->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>5.8.1</version>
      <scope>test</scope>
    </dependency>

    <!--https://maven.apache.org/surefire/dependency-info.html-->
    <dependency>
      <groupId>org.apache.maven.surefire</groupId>
      <artifactId>surefire</artifactId>
      <version>3.0.0-M5</version>
      <type>pom</type>
    </dependency>

    <!--https://mvnrepository.com/artifact/org.mockito/mockito-junit-jupiter/4.0.0-->
    <!--Unit tests only in Catpoint_Module-->
    <!--Moved here because tests were failing-->
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-junit-jupiter</artifactId>
      <version>4.0.0</version>
      <scope>test</scope>
    </dependency>

    <!--https://mvnrepository.com/artifact/org.mockito/mockito-inline/4.0.0-->
    <!--On the advice of https://knowledge.udacity.com/questions/656069-->
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-inline</artifactId>
      <version>4.0.0</version>
      <scope>test</scope>
    </dependency>

  </dependencies>

  <!--We moved this from the parent pom because this is the module from which we execute the application-->
  <!--Then we moved it back because of a mentor's post  https://knowledge.udacity.com/questions/515786-->
  <build>

    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
      <plugins>
        <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
        <plugin>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.1.0</version>
          <executions>
            <execution>
              <id>auto-clean</id>
              <phase>initialize</phase>
              <goals>
                <goal>clean</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.0.2</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.1</version>
          <configuration>
            <source>16</source>
            <target>16</target>
          </configuration>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <!--On the advice of https://knowledge.udacity.com/questions/725133-->
          <configuration>
            <argLine>
              --add-opens Catpoint.Module/com.udacity.catpoint.service=ALL-UNNAMED
            </argLine>
          </configuration>
          <version>3.0.0-M5</version>
        </plugin>

        <plugin>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.0.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-install-plugin</artifactId>
          <version>2.5.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>2.8.2</version>
        </plugin>
        <!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
        <plugin>
          <artifactId>maven-site-plugin</artifactId>
          <version>3.9.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-project-info-reports-plugin</artifactId>
          <version>3.1.1</version>
        </plugin>

        <!--https://www.baeldung.com/executable-jar-with-maven-->
        <plugin>
          <!--<groupId>org.apache.maven.plugins</groupId>-->
          <artifactId>maven-assembly-plugin</artifactId>
          <version>3.3.0</version>
          <executions>
            <execution>
              <phase>package</phase>
              <goals>
                <goal>single</goal>
              </goals>
              <configuration>
                <archive>
                  <manifest>
                    <mainClass>
                      com.udacity.catpoint.application.CatpointApp
                    </mainClass>
                  </manifest>
                </archive>
                <descriptorRefs>
                  <descriptorRef>jar-with-dependencies</descriptorRef>
                </descriptorRefs>
              </configuration>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>

  </build>

</project>
